plugins {
    id "io.spring.dependency-management" version "1.1.7" apply false
    id "org.springframework.boot" version "3.4.2" apply false
}

subprojects {

    apply plugin: "java-library"
    apply plugin: "io.spring.dependency-management"
    if (project.name in ["pname-cmd", "pname-web"]) {
        apply plugin: "org.springframework.boot"
    }

    if (project.name == "pname-cmd") {
        springBoot { mainClass = "cherry.pname.Main" }
    }
    if (project.name == "pname-web") {
        springBoot { mainClass = "cherry.pname.Main" }
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
        sourceCompatibility = JavaVersion.VERSION_21
        targetCompatibility = JavaVersion.VERSION_21
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
    }

    repositories { mavenCentral() }

    dependencyManagement {
        imports { mavenBom "org.springframework.boot:spring-boot-dependencies:3.4.2" }
        dependencies {
            dependency group: "com.google.guava", name: "guava", version: "33.4.0-jre"
            dependency group: "org.apache.commons", name: "commons-csv", version: "1.13.0"
        }
    }

    dependencies {
        if (project.name == "pname-common") {
            implementation "org.springframework.boot:spring-boot-starter"
            runtimeOnly "org.springframework.boot:spring-boot-starter-aop"
            implementation "com.google.guava:guava"
            implementation "org.apache.commons:commons-lang3"
            implementation "org.apache.commons:commons-csv"
        }
        if (project.name == "pname-cmd") {
            implementation project(":pname-common")
            implementation "org.springframework.boot:spring-boot-starter"
            implementation "org.apache.commons:commons-lang3"
            implementation "org.apache.commons:commons-csv"
        }
        if (project.name == "pname-web") {
            implementation project(":pname-common")
            implementation "org.springframework.boot:spring-boot-starter-web"
            implementation "org.springframework.boot:spring-boot-starter-thymeleaf"
            implementation "org.apache.commons:commons-lang3"
            implementation "org.apache.commons:commons-csv"
        }
        testImplementation "org.springframework.boot:spring-boot-starter-test"
    }
}
